Version Next

    - Wait for min_write_delay before access after write error (issue #76)
    - Configure TCP keep-alive on HTTP connections (issue #78)
    - Added support for server side encryption (pull #81)

Version 1.4.4 released February 1, 2017

    - Added `--defaultContentEncoding' for non-compliant backends (issue #68)
    - Fixed auth bug when prefix contains URL-encodable char (issue #69)
    - Remove restriction preventing streaming encryption modes (issue #70)

Version 1.4.3 released July 25, 2016

    - Add support for STANDARD_IA storage class (issue #59)
    - Set "Accept-Encoding" header appropriately (issue #48)
    - Fix build issue with OpenSSL 1.1.0 (issue #64)

Version 1.4.2 released September 1, 2015

    - Update license to fix OpenSSL vs. GPL conflict
    - Remove obsolete Debian files
    - Fix typos in help output

Version 1.4.1 released May 4, 2015

    - Fix use-after-free bug configuring base URL (github issue #44)

Version 1.4.0 released April 17, 2015

    - Added support for authentication version 4 (issue #51)
    - Added support for credentials via IAM role from EC2 meta-data (issue #48)
    - Fixed bug where `--erase' did not clear the mounted flag
    - Moved from Google project hosting to GitHub
    - Fixed compile problem on FreeBSD

Version 1.3.7 (r496) released 18 July 2013

    - Add `--keyLength' for overriding generated encryption key length

Version 1.3.6 (r493) released 16 July 2013

    - Fix use of MAX_HOST_NAME in http_io.c (issue #42)
    - Fix encryption key generation bug (on some systems)

Version 1.3.5 (r485) released 29 May 2013

    - Check for duplicate mount at startup (issue #10)
    - Remove obsolete backward-compatibility block size check

Version 1.3.4 (r476) released 2 Apr 2013

    - Support FUSE fallocate() call to zero unused blocks

Version 1.3.3 (r463) released 7 Apr 2012

    - Fix bug in validation of --baseURL parameter (issue #34)